welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:12: error: value retourne is not a member of Nothing
possible cause: maybe a semicolon is missing before `value retourne'?
	} retourne(); }
          ^SlugTracking:3: error: type mismatch;
 found   : Unit
 required: Boolean
	 if ( !estFaceMur() ) { avance(); 
         ^